--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,29 +5,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#4C3C4952"
-    tools:context="github.hellocsl.cursorwheellayout.MainActivity">
+    tools:context="github.hellocsl.cursorwheellayout.activity.MainActivity">
 
     <github.hellocsl.cursorwheel.CursorWheelLayout
         android:id="@+id/test_circle_menu_top"
-        android:layout_width="280dip"
-        android:layout_height="280dip"
+        android:layout_width="370dip"
+        android:layout_height="370dip"
         android:layout_centerInParent="true"
-        android:layout_gravity="center_horizontal|top"
         app:wheelCursorColor="#009688"
         app:wheelCursorHeight="19dip"
         app:wheelItemRotateMode="none"
         app:wheelSelectedAngle="270">
 
-        <ImageView
-            android:id="@id/id_wheel_menu_center_item"
-            style="@style/TextAppearance.AppCompat.Large.Inverse"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="Wheel"
-            android:textColor="#009688"
-        />
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/id_wheel_menu_center_item"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:src="@drawable/ic_bank_bc"
+            />
     </github.hellocsl.cursorwheel.CursorWheelLayout>
+
+    <TextView
+        android:id="@+id/folder_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="FOLDER NAME"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp"
+        android:textSize="25sp"
+        android:textColor="@color/colorPrimary"
+        />
 
 </RelativeLayout>
