--- a/app/src/main/res/layout/wheel_image_item.xml
+++ b/app/src/main/res/layout/wheel_image_item.xml
@@ -2,18 +2,17 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="wrap_content"
+    android:layout_gravity="center"
              android:layout_height="wrap_content"
-             android:gravity="center"
-             tools:background="@color/bg_wheel">
+             >
 
-
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/wheel_menu_item_iv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="40dp"
         android:layout_gravity="center"
-        android:scaleType="centerInside"
-        tools:src="@drawable/ic_bank_bc"
-    />
+        android:layout_height="40dp"
+        android:src="@drawable/ic_bank_bc"
+        />
 
 </FrameLayout>
